# Vacancy_Insight_HH.ru

./: .env.example  .flake8  .gitignore  .mypy.ini  README.md  main.py  pyproject.toml  requirements.txt
src/: api_hh.py  db_manager.py
tests/: test_api_hh.py  test_db_manager.py
