[project]
name = "vacancy_insight"
version = "0.1.0"
description = ""
authors = [
    {name = "ANTAQ",email = "mymillions@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
